common-applications/test-environment/community-summary/openeuler/oauth-proxy.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: openeuler-oauth2-proxy
  namespace: community-summary
spec:
  selector:
    k8s-app: openeuler-oauth2-proxy
  ports:
  - name: http
    port: 4180
    protocol: TCP
    targetPort: 4180

---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    k8s-app: openeuler-oauth2-proxy
  name: openeuler-oauth2-proxy
  namespace: community-summary
spec:
  selector:
    matchLabels:
      k8s-app: openeuler-oauth2-proxy
  template:
    metadata:
      labels:
        k8s-app: openeuler-oauth2-proxy
    spec:
      imagePullSecrets:
      - name: huawei-swr-image-pull-secret
      containers:
      - args:
        - --provider=gitee
        - --email-domain=*
        - --proxy-prefix=/oauth2
        - --skip-validate-email=true
        - --skip-auth-regex=^/agreement_ch.html
        - --skip-auth-regex=^/agreement_en.html
        - --upstream=http://openeuler-summary-service.community-summary.svc.cluster.local:8080
        - --http-address=0.0.0.0:4180
        - --cookie-expire=6h0m0s
        - --set-xauthrequest=true
        - --custom-templates-dir=/bin/static/login
        - --custom-templates-sign-in=euler.html
        image: swr.cn-north-4.myhuaweicloud.com/opensourceway/common/oauth2-proxy:ad4bd4e8d03cd33395c19483bc4370464db5c311
        imagePullPolicy: Always
        name: oauth2-proxy
        ports:
        - containerPort: 4180
          protocol: TCP

---
apiVersion: v1
kind: Service
metadata:
  name: openeuler-en-oauth2-proxy
  namespace: community-summary
spec:
  selector:
    k8s-app: openeuler-en-oauth2-proxy
  ports:
  - name: http
    port: 4180
    protocol: TCP
    targetPort: 4180

---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    k8s-app: openeuler-en-oauth2-proxy
  name: openeuler-en-oauth2-proxy
  namespace: community-summary
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: openeuler-en-oauth2-proxy
  template:
    metadata:
      labels:
        k8s-app: openeuler-en-oauth2-proxy
    spec:
      imagePullSecrets:
      - name: huawei-swr-image-pull-secret
      containers:
      - args:
        - --provider=gitee
        - --email-domain=*
        - --proxy-prefix=/en/oauth2
        - --skip-validate-email=true
        - --skip-auth-regex=^/en/agreement_ch.html
        - --skip-auth-regex=^/en/agreement_en.html
        - --upstream=http://openeuler-summary-service.community-summary.svc.cluster.local
        - --http-address=0.0.0.0:4180
        - --cookie-expire=6h0m0s
        - --set-xauthrequest=true
        - --custom-templates-dir=/bin/static/login
        - --custom-templates-sign-in=euler-en.html
        image: swr.cn-north-4.myhuaweicloud.com/opensourceway/common/oauth2-proxy:ad4bd4e8d03cd33395c19483bc4370464db5c311
        imagePullPolicy: Always
        name: oauth2-proxy
        ports:
        - containerPort: 4180
          protocol: TCP
