common-applications/test-environment/community-summary/openeuler/openeuler-summary-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubernetes.io/elb.class: union
    kubernetes.io/elb.id: 015c6fe2-3dea-4e65-a508-83dbe5592d1a
    kubernetes.io/elb.lb-algorithm: ROUND_ROBIN
  name: openeuler-summary-service-loadbalencer
  namespace: community-summary
spec:
  externalTrafficPolicy: Cluster
  ports:
  - name: httpport
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: openeuler-summary
  type: LoadBalancer
