common-applications/test-environment/community-summary/openeuler/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: openeuler-summary-service
  namespace: community-summary
spec:
  ports:
  - name: http-port
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: openeuler-summary
  type: ClusterIP
